--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,11 +24,11 @@
 }
 
 .prose a {
-  @apply decoration-neutral-400 decoration-[0.1em] underline-offset-2 transition-all dark:decoration-neutral-600;
+  @apply decoration-neutral-400 decoration-[0.1em] underline-offset-2 transition-all decoration-neutral-600;
 }
 
 .prose .anchor:after {
-  @apply text-neutral-300 dark:text-neutral-700;
+  @apply text-neutral-300 text-neutral-700;
   content: "#";
 }
 
@@ -37,7 +37,7 @@
 }
 
 .prose pre {
-  @apply bg-neutral-50 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-neutral-200 dark:border-neutral-900;
+  @apply bg-neutral-50 bg-neutral-900 rounded-lg overflow-x-auto;
 }
 
 .prose code {
@@ -47,7 +47,7 @@
 }
 
 .prose pre code {
-  @apply p-0 text-neutral-800 dark:text-neutral-200;
+  @apply p-0 text-neutral-800 text-neutral-200;
   border: initial;
   line-height: 1.5;
 }
