--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  transition: background-color 0.3s ease, color 0.2s ease, border-color 0.3s ease;
-}
-
-.prose .anchor {
-  @apply invisible absolute no-underline;
-
-  margin-left: -1em;
-  padding-right: 0.5em;
-  width: 80%;
-  max-width: 700px;
-  cursor: pointer;
+@layer base {
+  :root {
+    --background: 250 250 249; /* stone-50 */
+    --foreground: 0 0 0;
+  }
+  .dark {
+    --background: 14 20 27; /* primaryBg */
+    --foreground: 255 255 255;
+  }
+  body {
+    background-color: rgb(var(--background));
+    color: rgb(var(--foreground));
+  }
 }
 
 .anchor:hover {
